--- a/ManyWords/Views/SpellingTrainingControl.xaml
+++ b/ManyWords/Views/SpellingTrainingControl.xaml
@@ -9,6 +9,30 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="480" d:DesignWidth="480">
+
+    <UserControl.Resources>
+        <Style TargetType="RichTextBox">
+            <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeNormal}" />
+            <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderBrush" Value="Transparent" />
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="RichTextBox">
+                        <Grid Background="Transparent">
+                            <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Margin="{StaticResource PhoneHorizontalMargin}">
+                                <ContentControl x:Name="ContentElement" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Padding="{TemplateBinding Padding}"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -21,7 +45,8 @@
         <TextBlock Grid.Row ="0" Name="txtWord" Text="{Binding Translation}" Margin="0,10,0,20"                   
                        FontWeight="Bold" FontSize="36" HorizontalAlignment="Center" />
 
-        <TextBox Grid.Row ="1" x:Name="txtInput" FontSize="30" TextInput="txtInput_TextInput" />
+        <TextBox Grid.Row ="1" x:Name="txtInput" FontSize="30" TextInput="txtInput_TextInput"/>
+        <RichTextBox Grid.Row ="1" x:Name="txtAnswer" Visibility="Collapsed"/>
 
         <Button Grid.Row="2" x:Name="btnCheck" Content="Check" Click="btnCheck_Click" />
         
