--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -126,7 +126,7 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <toolkit:ListPicker Grid.Column="0" x:Name="languagePicker"
+                        <toolkit:ListPicker Grid.Column="0" x:Name="languagePicker"                                            
                                         Width="Auto"
                                         Header="Select language you learn" 
                                         FullModeHeader="Select language you learn"
@@ -134,16 +134,24 @@
                                         FullModeItemTemplate="{StaticResource LanguagePickerItemTemplate}"
                                         CacheMode="BitmapCache" SelectionChanged="languagePicker_SelectionChanged" />
 
-                        <Button Grid.Column="1" x:Name="btnMore" Margin="-10,0,-8,0" Height="75" VerticalAlignment="Bottom" Content="M" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Click="btnMore_Click" />
+                        <Button Grid.Column="1" x:Name="btnMore"
+                                Margin="-27,0,0,-3"    
+                                Height="82" Width="70" 
+                                VerticalAlignment="Bottom" HorizontalContentAlignment="Left"     
+                                BorderBrush="Transparent"
+                                
+                                Background="White" Foreground="Black" Opacity="0.6"
+                                Content="..."
+                                VerticalContentAlignment="Center" Click="btnMore_Click" />
                     </Grid>
 
-                    <Button Grid.Row="1" x:Name="buttonNewWord" Content="New Word" 
+                    <Button Grid.Row="1" x:Name="buttonNewWord" Content="new word" 
                             Margin ="5,10,5,15" Height="80"                            
                             Style="{StaticResource ActionButtonStyle}" Tag="/Images/AddWord.png"
                             Click="ApplicationBarButtonAddWord_Click"
                             views:TiltEffect.IsTiltEnabled="True"/>
 
-                    <Button Grid.Row="2" x:Name="buttonTraining" Content="Training" 
+                    <Button Grid.Row="2" x:Name="buttonTraining" Content="training" 
                             Margin ="5,5,5,5" Height="80" 
                             Style="{StaticResource ActionButtonStyle}" Tag="/Images/Training.png"
                             Click="StartTraining_Click"
@@ -156,7 +164,7 @@
             </controls:PanoramaItem>
 
             <!--**********************************************************-->
-            <!--progress-->
+            <!--vocabularies-->
             <controls:PanoramaItem>
                 <controls:PanoramaItem.Header>
                     <StackPanel Orientation="Horizontal">
