--- a/ManyWords/Views/SpellingTrainingControl.xaml
+++ b/ManyWords/Views/SpellingTrainingControl.xaml
@@ -11,6 +11,62 @@
     d:DesignHeight="480" d:DesignWidth="480">
 
     <UserControl.Resources>
+
+        <Style TargetType="Button" x:Key="ResultIconStyle">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="Common">
+                                    <VisualState x:Name="Normal">
+                                        <Storyboard>
+                                            <DoubleAnimation To="0" Duration="0:00:00" Storyboard.TargetName="iconWrong" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                            <DoubleAnimation To="0" Duration="0:00:00" Storyboard.TargetName="iconRight" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Wrong">
+                                        <Storyboard>
+                                            <DoubleAnimation To="1" Duration="0:00:00.5" Storyboard.TargetName="iconWrong" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                            <DoubleAnimation To="0" Duration="0:00:00.5" Storyboard.TargetName="iconRight" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Correct">
+                                        <Storyboard>
+                                            <DoubleAnimation To="1" Duration="0:00:00.5" Storyboard.TargetName="iconRight" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                            <DoubleAnimation To="0" Duration="0:00:00.5" Storyboard.TargetName="iconWrong" Storyboard.TargetProperty="(UIElement.Opacity)" />
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+
+                            <Rectangle x:Name="iconRight" Opacity="1"
+                                       HorizontalAlignment="Right" Width="50" Height="50" Fill="Lime">
+                                <Rectangle.OpacityMask>
+                                    <ImageBrush Stretch="Fill" ImageSource="/Images/right.png"/>
+                                </Rectangle.OpacityMask>
+                            </Rectangle>
+
+                            <Rectangle x:Name="iconWrong" Opacity="1" 
+                                       HorizontalAlignment="Right" Width="50" Height="50" Fill="DarkRed">
+                                <Rectangle.OpacityMask>
+                                    <ImageBrush Stretch="Fill" ImageSource="/Images/wrong.png"/>
+                                </Rectangle.OpacityMask>
+                            </Rectangle>
+
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
         <Style TargetType="RichTextBox">
             <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeNormal}" />
             <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}" />
@@ -39,19 +95,42 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
         <TextBlock Grid.Row ="0" Name="txtWord" Text="{Binding Translation}" Margin="0,10,0,20"                   
-                       FontWeight="Bold" FontSize="36" HorizontalAlignment="Center" />
+                       FontWeight="Bold" FontSize="36"  HorizontalAlignment="Center" />
 
-        <TextBox Grid.Row ="1" x:Name="txtInput" FontSize="30" TextInput="txtInput_TextInput"/>
-        <RichTextBox Background="{StaticResource PhoneTextBoxBrush}"
-                     Foreground="{StaticResource PhoneTextBoxForegroundBrush}"
-                     Margin="0,10,0,20"
-                     Padding="5,0,0,0"
-                     Grid.Row ="1" x:Name="txtAnswer" Visibility="Collapsed"/>
 
+
+        <Grid Grid.Row ="1">
+            <TextBox x:Name="txtInput" FontSize="30" TextInput="txtInput_TextInput"/>
+
+            <Button x:Name="iconResult" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Style="{StaticResource ResultIconStyle}"
+                    Margin="0,0,20,0"/>
+        </Grid>
+
+        <Grid Grid.Row ="2" x:Name="panelAnswer"  Visibility="Collapsed">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <TextBlock Grid.Row ="0" TextWrapping="Wrap" Margin="10,15,0,0"  
+                   Text="Correct answer:" Style="{StaticResource PhoneTextSubtleStyle}" />
+            
+            <RichTextBox Grid.Row ="1" x:Name="txtAnswer"
+                        Background="{StaticResource PhoneTextBoxBrush}"
+                        Foreground="{StaticResource PhoneTextBoxForegroundBrush}"
+                        Height="56"
+                        Margin="0,10,0,20"
+                        Padding="5,0,0,0"/>
+        </Grid>
+        
         <Button Grid.Row="2" x:Name="btnCheck" Content="Check" Click="btnCheck_Click" />
         
         <TextBlock Grid.Row ="3" x:Name="txtTip" TextWrapping="Wrap" Margin="10,15,0,0"  
