--- a/ManyWords/Views/TrainingView.xaml
+++ b/ManyWords/Views/TrainingView.xaml
@@ -8,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:ManyWords.Views"
     xmlns:my="clr-namespace:Microsoft.Advertising.Mobile.UI;assembly=Microsoft.Advertising.Mobile.UI"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"    
     d:DataContext="{d:DesignData ../Model/MultichoiceTrainingViewTestData.xml}"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -66,12 +67,12 @@
             <TextBlock x:Name="ApplicationTitle" Text="{Binding Path=AppResources.AppName, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}"/>
         </StackPanel>
 
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,5,0,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,5,0,0" Tap="ContentPanel_Tap">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-
+            
             <local:AnswerChoiceControl x:Name="choiceControl" Visibility="Collapsed" Grid.Row="0"/>
 
             <local:PresentWordControl local:TiltEffect.IsTiltEnabled="True" x:Name="presentControl" Visibility="Collapsed" Grid.Row="0"/>
@@ -91,6 +92,10 @@
                            Foreground="{StaticResource PhoneAccentBrush}"
                            FontSize="48" FontWeight="Bold"/>
             </StackPanel>
+
+            <toolkit:PerformanceProgressBar Grid.Row="0" 
+                                            x:Name="performanceProgressBar"
+                                            VerticalAlignment="Center"/>
 
 
         </Grid>
