--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -100,7 +100,7 @@
                                                     <ImageBrush Stretch="Fill" ImageSource="/Images/Training.png"/>
                                                 </Rectangle.OpacityMask>
                                             </Rectangle>
-                                            
+
                                         </ControlTemplate>
                                     </Button.Template>
                                 </Button>
@@ -117,7 +117,7 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneBackgroundBrush}">
 
-        <controls:Panorama Title="ManyWords">
+        <controls:Panorama Title="{Binding Path=AppResources.AppName, Source={StaticResource LocalizedStrings}}">
 
             <controls:Panorama.TitleTemplate>
                 <DataTemplate>
@@ -125,14 +125,14 @@
                            FontSize="100" Margin="0,50,0,0" />
                 </DataTemplate>
             </controls:Panorama.TitleTemplate>
-            
+
             <controls:Panorama.Background>
                 <ImageBrush ImageSource="/Images/PanoramaBackground.jpg"/>
             </controls:Panorama.Background>
 
             <!--**********************************************************-->
-            <!--trainings-->
-            <controls:PanoramaItem Header="start">
+            <!--welcome-->
+            <controls:PanoramaItem Header="{Binding Path=AppResources.MainPage_PanoramaTitleStart, Source={StaticResource LocalizedStrings}}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -140,6 +140,7 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
+                    <!--Language selector-->
                     <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -148,7 +149,7 @@
 
                         <toolkit:ListPicker Grid.Column="0" x:Name="languagePicker"                                            
                                         Width="Auto"
-                                        Header="Select language you learn" 
+                                        Header="{Binding Path=AppResources.MainPage_SelectLanguageTip, Source={StaticResource LocalizedStrings}}" 
                                         FullModeHeader="Select language you learn"
                                         ItemTemplate="{StaticResource LanguagePickerItemTemplate}"
                                         FullModeItemTemplate="{StaticResource LanguagePickerItemTemplate}"
@@ -165,13 +166,15 @@
                                 VerticalContentAlignment="Center" Click="btnMore_Click" />
                     </Grid>
 
-                    <Button Grid.Row="1" x:Name="buttonNewWord" Content="new word" 
+                    <!--Button for add new word-->
+                    <Button Grid.Row="1" x:Name="buttonNewWord" Content="{Binding Path=AppResources.MainPage_ButtonNewWord, Source={StaticResource LocalizedStrings}}" 
                             Margin ="5,15,5,0" Height="80"                            
                             Style="{StaticResource ActionButtonStyle}" Tag="/Images/AddWord.png"
                             Click="ApplicationBarButtonAddWord_Click"
                             views:TiltEffect.IsTiltEnabled="True"/>
 
-                    <Button Grid.Row="2" x:Name="buttonTraining" Content="training" 
+                    <!--Button for start training-->
+                    <Button Grid.Row="2" x:Name="buttonTraining" Content="{Binding Path=AppResources.MainPage_ButtonTraining, Source={StaticResource LocalizedStrings}}" 
                             Margin ="5,15,5,5" Height="80" 
                             Style="{StaticResource ActionButtonStyle}" Tag="/Images/Training.png"
                             Click="StartTraining_Click"
@@ -188,7 +191,7 @@
             <controls:PanoramaItem>
                 <controls:PanoramaItem.Header>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="vocabs"/>
+                        <TextBlock Text="{Binding Path=AppResources.MainPage_PanoramaTitleVocabularies, Source={StaticResource LocalizedStrings}}"/>
                         <Button  x:Name ="btnAddVocabulary" Margin="15,0,0,15" views:TiltEffect.IsTiltEnabled="True" Click="btnAddVocabulary_Click">
                             <Button.Template>
                                 <ControlTemplate>
