--- a/ManyWords/Views/ExtendedLanguageSelect.xaml
+++ b/ManyWords/Views/ExtendedLanguageSelect.xaml
@@ -38,8 +38,10 @@
             </Grid.RowDefinitions>
 
             <ListBox Grid.Row="0" x:Name="lstLanguages" ItemTemplate="{StaticResource LanguagePickerItemTemplate}" />
-            
-            <Button Grid.Row="1" x:Name="btnReady" Content="Select" Click="btnReady_Click" />
+
+            <Button Grid.Row="1" x:Name="btnReady" 
+                    Content="{Binding Path=AppResources.LanguageSelect_ButtonSelect, Source={StaticResource LocalizedStrings}}" 
+                    Click="btnReady_Click" />
             
         </Grid>
     </Grid>
