--- a/ManyWords/Views/SpellingTrainingControl.xaml
+++ b/ManyWords/Views/SpellingTrainingControl.xaml
@@ -130,8 +130,8 @@
                         Margin="0,10,0,20"
                         Padding="5,0,0,0"/>
         </Grid>
-        
-        <Button Grid.Row="2" x:Name="btnCheck" Content="Check" Click="btnCheck_Click" />
+
+        <Button Grid.Row="2" x:Name="btnCheck" Content="{Binding Path=AppResources.SpellingCheck_ButtonCheck, Source={StaticResource LocalizedStrings}}" Click="btnCheck_Click" />
         
         <TextBlock Grid.Row ="3" x:Name="txtTip" TextWrapping="Wrap" Margin="10,15,0,0"  
                    Text="" Style="{StaticResource PhoneTextSubtleStyle}" />
